html: fix aside nav overflow

--- a/packages/html/src/assets/styles/playground.scss
+++ b/packages/html/src/assets/styles/playground.scss
@@ -19,9 +19,15 @@
     padding: 20px;
   }
 
+  .aside {
+    overflow-y: scroll;
+    @include invisibleScrollbar;
+  }
+
   .nav {
     display: flex;
     flex-direction: column;
+    max-height: 100vh;
 
     &__category {
       padding: 5px 20px;
